# Backgeek

./: .env_exemplo  .gitignore  backgeek_bkp.json  db.sqlite3  pyproject.toml  requirements.txt
backgeek/: admin.py  apps.py  models.py  serializers.py  views.py
backgeek/migrations/: 0001_initial.py  0002_delete_calca_delete_chapeu_delete_tenis_and_more.py  0003_remove_camiseta_capa_camiseta_capa.py  0004_rename_capa_camiseta_imagem.py  0005_alter_camiseta_imagem.py  0006_alter_camiseta_imagem.py  0007_alter_camiseta_imagem.py  0008_estampa_moletom.py  0009_produto.py  0010_categoria_alter_produto_options.py  0011_produto_categoria_alter_categoria_titulo.py  0012_rename_categoria_produto_categoria.py  0013_produto_capa.py
config/: settings.py  urls.py
media/images/: 1a1d7cec-382f-4f38-a94e-a9474ec5d40f  81d214c5-fbdf-4603-adcc-56d071ccd6cd  a528837e-c2db-43ff-b6d7-39ee3050c340  ab71ea75-bb4c-4a43-a9c7-c67e737528e0
uploader/migrations/: 0001_initial.py
