
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Dominic", email = "dominic.krelling@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
